--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,6 @@
-spring.datasource.url=jdbc:mysql://database
-spring.datasource.username=user
-spring.datasource.password=pass
+spring.datasource.url=${BD_URL}
+spring.datasource.username=${BD_USER}
+spring.datasource.password=${BD_PASSWORD}
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
